--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   },
   "dependencies": {
     "bootstrap": "^5.3.1",
-    "firebase": "^10.1.0",
+    "firebase": "^10.2.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.8.0",
     "react-dom": "^18.2.0",
@@ -19,16 +19,17 @@
     "react-router-bootstrap": "^0.26.2",
     "react-router-dom": "^6.15.0",
     "react-scroll-parallax": "^3.4.2",
-    "react-ui-scrollspy": "^2.3.0"
+    "react-ui-scrollspy": "^2.3.0",
+    "uniqid": "^5.4.0"
   },
   "devDependencies": {
-    "@types/react": "^18.2.15",
+    "@types/react": "^18.2.20",
     "@types/react-dom": "^18.2.7",
-    "@vitejs/plugin-react": "^4.0.3",
-    "eslint": "^8.45.0",
-    "eslint-plugin-react": "^7.32.2",
+    "@vitejs/plugin-react": "^4.0.4",
+    "eslint": "^8.47.0",
+    "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.3",
-    "vite": "^4.4.5"
+    "vite": "^4.4.9"
   }
 }
