--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react": "^18.2.0",
     "react-bootstrap": "^2.8.0",
     "react-dom": "^18.2.0",
+    "react-fullscreen-image": "^0.0.3",
     "react-multi-carousel": "^2.8.4",
     "react-router-bootstrap": "^0.26.2",
     "react-router-dom": "^6.15.0",
